I have followed along with the class to create the word guess game

--- a/28-Stu_Mini-Project/Main/index.html
+++ b/28-Stu_Mini-Project/Main/index.html
@@ -15,7 +15,7 @@
     <main>
       <section>
         <div class="card word-guess">
-          <div class="large-font word-blanks">J _ v _ S c r_ _t</div>
+          <div class="large-font word-blanks">I S_C_ _T _O_F</div>
         </div>
       </section>
 
